[gd_scene load_steps=15 format=3 uid="uid://dyao8oeedxc4t"]

[ext_resource type="Script" path="res://assets/scripts/towers/i_tower.gd" id="1_48s8f"]
[ext_resource type="Texture2D" uid="uid://bijq7gj3bys01" path="res://assets/sprites/ui/towers_button_ui.png" id="2_582oh"]
[ext_resource type="Texture2D" uid="uid://ckgbnc6a6sxhq" path="res://assets/sprites/ui/ui_theme.png" id="3_pge51"]

[sub_resource type="CircleShape2D" id="CircleShape2D_atmfv"]
radius = 200.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mdln7"]
size = Vector2(76, 78)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hfmlb"]
size = Vector2(109, 141)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghp0w"]
atlas = ExtResource("2_582oh")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkppm"]
atlas = ExtResource("2_582oh")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1iqhp"]
atlas = ExtResource("2_582oh")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3nur"]
atlas = ExtResource("2_582oh")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dj1ql"]
atlas = ExtResource("2_582oh")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7s786"]
atlas = ExtResource("3_pge51")
region = Rect2(631, 72, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmv3u"]
atlas = ExtResource("2_582oh")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_35q80"]
atlas = ExtResource("2_582oh")
region = Rect2(16, 0, 16, 16)

[node name="ITower" type="Node2D"]
script = ExtResource("1_48s8f")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_as_relative = false
texture_filter = 1
position = Vector2(0, -15)
scale = Vector2(2, 2)
autoplay = "idle_1"

[node name="Area2D" type="Area2D" parent="."]
input_pickable = false

[node name="HitArea" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_atmfv")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="BulletContainer" type="Node" parent="."]

[node name="Aim" type="Marker2D" parent="."]

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootSoundPlayer" type="AudioStreamPlayer2D" parent="."]
volume_db = -5.0
bus = &"SFX"

[node name="PlacementHitbox" type="Area2D" parent="."]
position = Vector2(1, 8)
collision_layer = 2
collision_mask = 2
input_pickable = false

[node name="PlacementHitboxShape" type="CollisionShape2D" parent="PlacementHitbox"]
shape = SubResource("RectangleShape2D_mdln7")
debug_color = Color(0.654902, 0.321569, 1, 0.419608)

[node name="ClickableArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickableArea"]
position = Vector2(0, -15)
shape = SubResource("RectangleShape2D_hfmlb")

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
z_index = 2000
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -170.0
offset_right = 135.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.168627, 0.168627, 0.168627, 0.65098)

[node name="ContainerButtonWeakest" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(68, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="SelectWeakestEnemy" type="TextureButton" parent="MarginContainer/ContainerButtonWeakest"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_ghp0w")
stretch_mode = 4

[node name="ContainerButtonStrongest" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(68, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="SelectStrongestEnemy" type="TextureButton" parent="MarginContainer/ContainerButtonStrongest"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 8
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_jkppm")
stretch_mode = 4

[node name="ContainerButtonFirst" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(68, 68)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="SelectFirstEnemy" type="TextureButton" parent="MarginContainer/ContainerButtonFirst"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_1iqhp")
stretch_mode = 4

[node name="ContainerButtonLast" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(68, 68)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="SelectLastEnemy" type="TextureButton" parent="MarginContainer/ContainerButtonLast"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_e3nur")
stretch_mode = 4

[node name="ContainerButtonRandom" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 68)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="SelectRandomEnemy" type="TextureButton" parent="MarginContainer/ContainerButtonRandom"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 0
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_dj1ql")
stretch_mode = 4

[node name="ContainerButtonClose" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="CloseGui" type="TextureButton" parent="MarginContainer/ContainerButtonClose"]
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_7s786")
stretch_mode = 4

[node name="ContainerButtonUpgrade" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(68, 68)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="UpgradeTower" type="TextureButton" parent="MarginContainer/ContainerButtonUpgrade"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_fmv3u")
stretch_mode = 4

[node name="UpgradeLabel" type="RichTextLabel" parent="MarginContainer/ContainerButtonUpgrade"]
texture_filter = 1
custom_minimum_size = Vector2(72, 20)
layout_mode = 2
size_flags_horizontal = 0
bbcode_enabled = true
text = "[font_size=11]cost: %s[/font_size][img=10x10]assets/sprites/ui/coin_cat.png[/img]"
scroll_active = false

[node name="ContainerButtonSell" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="SellTower" type="TextureButton" parent="MarginContainer/ContainerButtonSell"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_35q80")
stretch_mode = 4

[node name="SellLabel" type="RichTextLabel" parent="MarginContainer/ContainerButtonSell"]
texture_filter = 1
custom_minimum_size = Vector2(70, 20)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
bbcode_enabled = true
text = "[font_size=11]sell: %s[/font_size][img=10x10]assets/sprites/ui/coin_cat.png[/img]"
scroll_active = false

[connection signal="area_entered" from="Area2D" to="." method="_on_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_exited"]
[connection signal="input_event" from="ClickableArea" to="." method="_on_clickable_area_input_event"]
[connection signal="pressed" from="MarginContainer/ContainerButtonWeakest/SelectWeakestEnemy" to="." method="_on_select_weakest_enemy_pressed"]
[connection signal="pressed" from="MarginContainer/ContainerButtonStrongest/SelectStrongestEnemy" to="." method="_on_select_strongest_enemy_pressed"]
[connection signal="pressed" from="MarginContainer/ContainerButtonFirst/SelectFirstEnemy" to="." method="_on_select_first_enemy_pressed"]
[connection signal="pressed" from="MarginContainer/ContainerButtonLast/SelectLastEnemy" to="." method="_on_select_last_enemy_pressed"]
[connection signal="pressed" from="MarginContainer/ContainerButtonRandom/SelectRandomEnemy" to="." method="_on_select_random_enemy_pressed"]
[connection signal="pressed" from="MarginContainer/ContainerButtonClose/CloseGui" to="." method="_on_close_gui_pressed"]
[connection signal="pressed" from="MarginContainer/ContainerButtonUpgrade/UpgradeTower" to="." method="_on_upgrade_tower_pressed"]
[connection signal="pressed" from="MarginContainer/ContainerButtonSell/SellTower" to="." method="_on_sell_tower_pressed"]
